--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-responsive-carousel": "^3.2.18"
+    "react-responsive-carousel": "^3.2.18",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
